# loftty

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
scripts/: 256-color-table.sh
src/: Emulator.cpp  Emulator.h  Pty.cpp  Pty.h  Terminal.cpp  Terminal.h  main.cpp
